--- a/blakearoberts/templates/base.jinja
+++ b/blakearoberts/templates/base.jinja
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -10,14 +10,8 @@
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark sticky-top">
-      <div class="container">
-        <ul class="nav">
-          <a class="navbar-brand" href="/">Blake's Portfolio</a>
-        </ul>
-      </div>
-    </nav>
-    {% block content %}{% endblock %}
+    {% include 'navbar.jinja' %}
+    {% block body %}{% endblock %}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
