--- a/blakearoberts/templates/index.jinja
+++ b/blakearoberts/templates/index.jinja
@@ -1,8 +1,11 @@
 {% extends 'base.jinja' %}
 {% block page_title %}Blake's Portfolio{% endblock %}
 {% block body %}
-<div class='container mt-3'>
-    <div class='row'>
+<div class='container'>
+    <div class='row mt-3'>
+        {% include 'about.jinja' %}
+    </div>
+    <div class='row mt-3'>
         {% for project in projects %}
         <div class='col-4'>
             {% include 'project.jinja' %}
