add resume and work experience

--- a/blakearoberts/templates/about.jinja
+++ b/blakearoberts/templates/about.jinja
@@ -11,7 +11,7 @@
                     <div class='card p-2'>
                         <h4 class='card-title'>{{ about.title }}</h4>
                         <p class='card-text'>{{ about.description }}</p>
-                        <h5 class='card-title mt-2'>Contact Me</h5>
+                        <h5 class='card-title mt-2'>Contact Information</h5>
                         <dl class='row mb-0'>
                             {% for key, value in about.contact.items() %}
                             <dt class='col-3 text-right'>{{ key }}</dt>
