--- a/blakearoberts/templates/base.jinja
+++ b/blakearoberts/templates/base.jinja
@@ -11,7 +11,9 @@
 </head>
 <body>
     {% include 'navbar.jinja' %}
-    {% block body %}{% endblock %}
+    <div class='container'>
+        {% block body %}{% endblock %}
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
