--- a/blakearoberts/templates/navbar.jinja
+++ b/blakearoberts/templates/navbar.jinja
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+<nav class='navbar navbar-expand-lg navbar-dark bg-primary sticky-top'>
     <div class='container'>
 
-        <a class="navbar-brand" href="/">Blake's Portfolio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <a class='navbar-brand' href='/'>Blake's Portfolio</a>
+        <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarMenu' aria-controls='navbarMenu' aria-expanded='false' aria-label='Toggle navigation'>
+            <span class='navbar-toggler-icon'></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarMenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
+        <div class='collapse navbar-collapse' id='navbarMenu'>
+            <ul class='navbar-nav mr-auto'>
+                <li class='nav-item'><a class='nav-link' href='/resume.pdf'>Resume</a></li>
+                <li class='nav-item'><a class='nav-link' href='/work_experience'>Work Experience</a></li>
+                <li class='nav-item'><a class='nav-link' href='/projects'>Projects</a></li>
             </ul>
         </div>
 
